<resources>
    <string name="app_name">ストック ヘルパー</string>
    <string name="text_load">Loading...</string>
    <string name="default_label_date">資料日期： </string>
    <string name="btn_start_text">開始推薦</string>
    <string name="label_menu">獲取數據中</string>
    <string name="label_finish">資料更新完成!</string>
    <string name="label_tool">指標</string>
    <string name="label_strategy">策略概述</string>
    <string name="label_case1">做多策略</string>
    <string name="label_case2">放空策略</string>


    <string name="back_case1">
        \t動態投資組合報酬比大盤高: 6.67%\n
        \t年化報酬率: 680.04%\n
        \t大盤指數年化報酬率: 103.73%
    </string>

    <string name="back_case2">
        \t動態投資組合報酬比大盤高: 17.67%\n
        \t年化報酬率: $138.91%$\n
        \t大盤指數年化報酬率: -58.1%
    </string>
    <string name="label_main">指標選擇</string>
    <string name="label_code">(0000)</string>
    <string name="label_company_name">公司名稱</string>
    <string name="label_info">個股資訊</string>
    <string name="zero">0.0</string>
    <string name="label_name">ストック ヘルパー</string>

</resources>
