<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Load">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_name"

            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/label_name" />

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="66dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/textview_frame" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="60dp"

            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_style"
            android:onClick="Start"
            android:text="@string/btn_start_text"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/label_menu"
            style="@style/Label_small"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/label_menu" />
    </LinearLayout>

</LinearLayout>